Added "_scopeCssViaAttr: true," property

--- a/at-core-mic.html
+++ b/at-core-mic.html
@@ -151,6 +151,7 @@ Example:
       
     Polymer({
         is:"at-core-mic",
+        _scopeCssViaAttr: true,
         properties: {
             recognition:{
                 type: Object,
