--- a/at-core-mic.html
+++ b/at-core-mic.html
@@ -1,4 +1,5 @@
 <!--
+Copyright (c) 2015 adenin TECHNOLOGIES. All rights reserved.
 Copyright (c) 2014 The Polymer Project Authors. All rights reserved.
 This code may only be used under the BSD style license found at http://polymer.github.io/LICENSE.txt
 The complete set of authors may be found at http://polymer.github.io/AUTHORS.txt
@@ -7,25 +8,7 @@ Code distributed by Google as part of the polymer project is also
 subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
 -->
 
-<!--
-The `at-core-mic` element has a mic icon and tapping on the mic will start the 
-speech recognition and invite the user to allow a page access to their
-microphone.  Once the access is allowed the user can start talking to the
-microphone and transcript will be recorded until the mic is tapped again to
-stop the speech recognition.
-
-Example:
-
-    <input value="{{transcript}}">
-    <at-core-mic transcript="{{transcript}}"></at-core-mic>
-
-@element at-core-mic
-@homepage github.io
--->
-
 <link rel="import" href="../polymer/polymer.html">
-<link rel="import" href="../at-core-theme/at-core-theme.html">
-<link rel="import" href="../polymer-gestures/polymer-gestures.html">
 
 <dom-module id="at-core-mic" attributes="language transcript completeTranscript">
     <style>
@@ -131,8 +114,7 @@ Example:
         }       
     </style>
     <template>
-        <at-core-theme></at-core-theme>
-        <div id="micContainer" class$="{{micContainerClasses}}">
+        <div id="micContainer" class$="{{micContainerClasses}}" on-tap="toggleRecognition">
             <div class="ring"></div>
             <div class="ring2"></div>
             <div class="icon">
@@ -233,7 +215,7 @@ Example:
             }
             else{
                 this.setAttribute('touch-action', 'none');
-                PolymerGestures.addEventListener(this, 'tap', this.toggleRecognition);
+                //PolymerGestures.addEventListener(this, 'tap', this.toggleRecognition);
             }
         },
       
@@ -257,7 +239,8 @@ Example:
             }
         },
       
-        toggleRecognition: function() {
+        toggleRecognition: function () {
+          console.log("toggleRecognition");
             if (!this.recognition) {
                 this.$.micContainer.classList.remove("recognizing");
                 return;
