added alternateIcon to be shown when no recognition is possible

--- a/at-core-mic.html
+++ b/at-core-mic.html
@@ -9,6 +9,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 -->
 
 <link rel="import" href="../tangere/tangere.html">
+<link rel="import" href="../at-carbon-icon/at-carbon-icon.html" >
 
 <dom-module id="at-core-mic">
   <template>
@@ -17,8 +18,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         display: inline-block;
         position: relative;
         width: 40px;
-        height: 40px;
-        cursor: pointer;
+        height: 40px;        
       }
 
       .mic-container {
@@ -29,9 +29,19 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         left: 0;
       }
 
-        .mic-container.recognizing {
-          z-index: 10;
-        }
+      .mic-container.recognizing {
+        z-index: 10;
+      }
+      
+      #alternate {
+        margin-top: 8px;
+        margin-left: 8px;
+        cursor: default;
+      }
+      
+      #micContainer {
+        cursor: pointer;
+      }
 
       .icon {
         position: absolute;
@@ -40,15 +50,15 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         border-radius: 50%;
       }
 
-        .icon > svg {
-          display: block;
-          position: absolute;
-          top: 8px;
-          left: 8px;
-          width: 24px;
-          height: 24px;
-          pointer-events: none;
-        }
+      .icon > svg {
+        display: block;
+        position: absolute;
+        top: 8px;
+        left: 8px;
+        width: 24px;
+        height: 24px;
+        pointer-events: none;
+      }
 
       .recognizing > .icon {
         background-color: #d23f31;
@@ -128,8 +138,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             <path d="M12,14c1.7,0,3-1.3,3-3l0-6c0-1.7-1.3-3-3-3c-1.7,0-3,1.3-3,3v6C9,12.7,10.3,14,12,14z M17.3,11c0,3-2.5,5.1-5.3,5.1c-2.8,0-5.3-2.1-5.3-5.1H5c0,3.4,2.7,6.2,6,6.7V21h2v-3.3c3.3-0.5,6-3.3,6-6.7H17.3z"></path>
           </g>
         </svg>
-      </div>
+      </div>      
     </div>
+    <at-carbon-icon id="alternate" icon="{{alternateIcon}}"></at-carbon-icon>
   </template>
 </dom-module>
 <script>
@@ -187,6 +198,18 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           reflectToAttribute: true,
           value: ''
         },
+        /**
+         * Alternate icon name which is shown when no voice recognition is available.
+         *
+         * @property completeTranscript
+         * @type string
+         * @default ''
+         */
+        alternateIcon: {
+          type: String,
+          reflectToAttribute: true,
+          value: ''
+        },
       },
       /**
        * Fired when the speech recognizer returns a result.
@@ -204,8 +227,15 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
       ready: function() {
         if (!window.webkitSpeechRecognition) {
-          this.style.display = 'none';
+          // when now speechrocginition is detected show alternate icon (when provided) or hide completely
+          if(this.alternateIcon) {
+            this.$.micContainer.style.display = 'none';
+            this.$.alternate.style.display = 'block';
+          } else {
+            this.style.display = 'none';
+          }
         } else {
+          this.$.alternate.style.display = 'none';
           this.setAttribute('touch-action', 'none');
           //PolymerGestures.addEventListener(this, 'tap', this.toggleRecognition);
           var recognition = {};
@@ -284,6 +314,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         }
         this.transcript = t;
         this.completeTranscript = ct;
+        //console.log("transcript " + t);
         this.fire('at-core-mic-result', {
           results: e.results,
           transcript: t,
