--- a/demo.html
+++ b/demo.html
@@ -38,6 +38,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <input id="coreMicInput">
   
     <at-core-mic id="coreMic"></at-core-mic>
+    
+    <at-core-mic id="coreMic2" alternate-icon="now:search"></at-core-mic>
   
   </div>
   
